2022-09-12  Frederik Seiffert <frederik@algoriddim.com>
	* configure.ac,
	* configure,
	* Source/GNUmakefile: Add ICU_CFLAGS and ICU_LIBS to CFLAGS and LIBS,
	respectively. Fixes issue GH-19 and GH-21.

2020-03-12  Frederik Seiffert <frederik@algoriddim.com>
	* Source/CFNumber: Add equality and hash functions.

2020-03-10  Frederik Seiffert <frederik@algoriddim.com>
	* Source/GSHashTable.c: Fix second hash function for double hashing
	collision case to avoid possible infinite loop.

2020-03-06  Frederik Seiffert <frederik@algoriddim.com>
	* Source/GNUmakefile.in,
	* Source/NSCFNumber.m,
	* Source/NSCFType.m: Implement toll-free bridging of CFNumber
	to NSNumber.
	* Tests/CFNumber/bridge.m: Add CFNumber bridging tests.

2019-11-15  Stefan Bidigaray <stefanbidi@gmail.com>
	* Source/CFNumber.c: Implement toll-free bridging in
	CFNumberGetValue().

2019-11-09  Stefan Bidigaray <stefanbidi@gmail.com>
	* Source/CFNumber.c: Implement partial toll-free bridging.

2019-11-09  Stefan Bidigaray <stefanbidi@gmail.com>
	* aclocal.m4,
	* configure,
	* configure.ac: Update configure to use pkg-config instead of
	icu-config.

2017-08-29  Stefan Bidigaray <stefanbidi@gmail.com>
	* Source/CFRuntime.c,
	* Source/GSObjCRuntime.h,
	* Source/config.h.in,
	* configure,
	* configure.ac: Clean up and simplify configure tests.

2017-08-25  Stefan Bidigaray <stefanbidi@gmail.com>
	* Headers/CoreFoundation/CFBase.h.in,
	* Headers/CoreFoundation/CFAvailability.h: Move availibility macros
	to the appropriate header.
	* configure,
	* configure.ac: Clean up configure macros.

2017-08-23  Stefan Bidigaray <stefanbidi@gmail.com>
	* Headers/CoreFoundation/CFBase.h.in
	* Source/CFRuntime.c:
	Implement CFAutorelease(), which is supposed to send a CF
	object into an autorelease pool regardless of ARC.

2017-08-04  Daniel Ferreira <dtf@stanford.edu>
	* Headers/CoreFoundation/CFBase.h.in:
	Create the CF_OPTIONS() macro, an equivalent to CF_ENUM() for defining
	enumerations.
